<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_page_background"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <include layout="@layout/include_title_bar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/line_grey_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edt_login_userId"
            style="@style/style_common_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_username_hint"
            android:inputType="phone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/common_page_background" />

        <EditText
            android:id="@+id/edt_login_passw"
            style="@style/style_common_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_passw_hint"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/bt_login_login"
        style="@style/style_common_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/login_title" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/login_register_entry"
            android:textColor="@color/common_text_grey" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tv_login_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/login_forget_entry"
            android:textColor="@color/common_text_grey" />
    </LinearLayout>


</LinearLayout>