<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:divider="@drawable/line_grey_horizontal"
    android:showDividers="middle"
    android:background="@color/common_page_background"
    tools:context="com.yikang.app.yikangserver.fragment.register.SetPasswordFragment">

    <EditText
        android:id="@+id/edt_set_password_password"
        style="@style/style_common_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_edit_bg"
        android:hint="@string/set_password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edt_set_password_password_again"
        style="@style/style_common_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/set_password_again_hint"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/bt_set_password_next"
        style="@style/style_common_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="40dp"
        android:text="@string/next_step" />


</LinearLayout>
