<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/title_bar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/titlebar"
            layout="@layout/include_title_bar" />
    </FrameLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="#3389e4">

        <TextView
            android:id="@+id/tv_invite_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="60sp"
            android:text="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:layout_marginTop="-10dp"
            android:text="@string/customers_sums"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/customers_tab_color"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_invite_register_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="24sp"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customerList_status_registed"
                    android:textSize="10sp"
                    android:textColor="@color/white" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/customers_tab_color"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_invite_service_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textSize="24sp"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customerList_status_consumed"
                    android:textColor="@color/white"
                    android:textSize="10dp"/>

            </LinearLayout>

        </LinearLayout>


        <RadioGroup
            android:id="@+id/rg_inviteCustomer_tabs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_inviteCustomer_item_tab_registed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:textColor="@drawable/selector_text_customer"
                android:textSize="16sp" />


            <RadioButton
                android:id="@+id/rb_inviteCustomer_item_tab_consumed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:textColor="@drawable/selector_text_customer"
                android:gravity="center"
                android:textSize="16sp" />
        </RadioGroup>

        <View
            android:id="@+id/view_inviteCustomer_item_indicator"
            android:layout_width="10dp"
            android:layout_height="3dp"
            android:layout_marginTop="1dp"
            android:layout_gravity="bottom"
            android:background="@drawable/triangle_indicator" />
    </FrameLayout>




    <android.support.v4.view.ViewPager
        android:id="@+id/vp_inviteCustomer_item_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_page_background"/>

</LinearLayout>